--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1517,16 +1517,22 @@ CSS
         z-index: 934222 !important;
         transition: 0.1s ease-in-out !important;
         left: 0% !important;
-        margin: 0% 1% !important;
+        margin: 0% 0.4% !important;
         position: fixed !important;
-        width: 96vw !important;
+        width: 98vw !important;
+        display:  flex !important ;
     }
 }
-
+.header_complany_log img{
+    height:50px;
+    width: 120px !important;
+background-size:cover; 
+}
 .dropdown-menu {
     position: absolute;
+    display:  block !important;
     z-index: 1000;
-    display: none;
+    /* display: none; */
     min-width: 10rem;
     padding: .5rem 0;
     margin: 0;
@@ -1735,8 +1741,7 @@ footer .nav-item > .nav-link {
 
     .marquee-content img {
         height: 60px;
-        margin: 0 30px;
-        vertical-align: middle;
+      
         transition: transform 0.3s ease;
     }
 
